Fixed slider on mobile devices

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://github.com/fruitfulcode/fruitful
 Author: fruitfulcode
 Author URI: https://github.com/fruitfulcode/
 Description: Fruitful - Free WordPress responsive theme with powerful theme options panel and simple clean front end design. Ability to modify styles and options according to your needs. Two different layout types responsive and fixed. Easily upload logo, background, edit colors, header and menu positions, slider, fonts, social icons, footer, custom css and much more. Translated to Russian, German, Spanish, French, Vietnamese, RTL ready. Works perfect with BuddyPress, WPML, Contact form 7, WooCommerce till version 3.0.       Fruitful PRO – WordPress responsive theme contains all the options of FREE version plus more options like ability to change width for container grid and support latest WooCommerce version.
-Version: 3.7
+Version: 3.8
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: theme-options, custom-header, custom-background, custom-menu, custom-colors, translation-ready, featured-images, full-width-template, one-column, right-sidebar, left-sidebar, editor-style
@@ -2457,7 +2457,7 @@ aside #lang_sel {
 	/*styles for responsive full header*/
 	.resp_full_width_menu>.container{display:none;}
 	.resp_full_width_menu>.site-header{display:block;}
-	.resp_full_width_menu.head-container{float:left;}
+    .main-slider-container {width: 100%;}
 	.resp_full_width_menu #header_language_select{display:block;}
 	.resp_full_width_menu #header_language_select .current,
 	.resp_full_width_menu #header_language_select .current a,
@@ -2466,6 +2466,7 @@ aside #lang_sel {
 	.resp_full_width_menu #lang-select-block a{padding:7px}
 
 	.resp_full_width_menu .site-header{ width:100%; float:left; }
+    .resp_full_width_menu:not(.fixed) .site-header {position: relative;}
 	.resp_full_width_menu .site-header .logo_wrapper{ display:block; float:left; width:48%; margin:10px 0 0 2%; }
     .resp_full_width_menu .site-header .cart_wrapper, .resp_full_width_menu .site-header .menu_button{ display:block; float:right; margin-left:12px; margin-right:12px; }
     .resp_full_width_menu .site-header .language_switcher{ display:block; float:right;}
@@ -2474,7 +2475,7 @@ aside #lang_sel {
     .resp_full_width_menu .site-header .menu_button button span{ display: block; margin: 0 auto; margin-bottom: 5px; background: #333333; height: 5px; width: 35px; border-radius: 3px; }
     .resp_full_width_menu .site-header .social-icon{ margin: 10px 22px 10px 20px; }
 
-	.resp_full_width_menu .menu_wrapper{ float:left; width:100%; overflow-y:auto; }
+	.resp_full_width_menu .menu_wrapper{ position: absolute; float:left; top: 100%; width:100%; overflow-y:auto; }
 	.resp_full_width_menu .menu_wrapper.collapse{ display:none; }
 	.resp_full_width_menu .menu_wrapper>div{ width:100%; float:left; }
 	.resp_full_width_menu ul{ list-style:none; }
